--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "Murugan K",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0",
+    "jsonwebtoken": "^9.0.1",
     "body-parser": "^1.20.2",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.3.1",
